--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -245,7 +245,7 @@ if(GCC)
         if(ARM64)
             set(ARM_ARGS -fPIC)
         else()
-            set(ARM_ARGS -march=armv6 -mfloat-abi=soft -mfpu=vfp -marm -fPIC)
+            set(ARM_ARGS -march=armv6 -mfpu=neon -marm -fPIC)
         endif()
         message(STATUS "cross compile arm")
 	message(ARM_ARGS ${ARM_ARGS})
