--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -673,7 +673,7 @@ if(ENABLE_SHARED)
         endif()
     endif()
     set_target_properties(x265-shared PROPERTIES SOVERSION ${X265_BUILD})
-    if(X265_LATEST_TAG OR QNX)
+    if(X265_LATEST_TAG)
         if(WINDOWS)
             set_target_properties(x265-shared PROPERTIES VERSION ${X265_LATEST_TAG})
         endif()
