--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -245,9 +245,8 @@ if(GCC)
         if(ARM64)
             set(ARM_ARGS -fPIC)
         else()
-            set(ARM_ARGS -march=armv6 -mfpu=vfp -marm)
+            set(ARM_ARGS -march=armv6 -mfpu=neon -marm)
         endif()
-        message(STATUS "cross compile arm")
 	message(ARM_ARGS ${ARM_ARGS})
     elseif(ARM)
         if(ARM64)
