--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -246,6 +246,7 @@ if(GCC)
             set(ARM_ARGS -fPIC)
         else()
             set(ARM_ARGS -march=armv6 -mfpu=neon -marm)
+	    add_definitions(-DHAVE_NEON)
         endif()
 	message(ARM_ARGS ${ARM_ARGS})
     elseif(ARM)
