Updated QNX armv7 neon

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -246,8 +246,9 @@ if(GCC)
             set(ARM_ARGS -fPIC)
         else()
             set(ARM_ARGS -march=armv6 -mfpu=neon -marm -fPIC)
+            add_definitions(-DHAVE_NEON)
         endif()
-	message(ARM_ARGS ${ARM_ARGS})
+        message(STATUS "cross compile arm")
     elseif(ARM)
         if(ARM64)
             set(ARM_ARGS -fPIC)
@@ -261,7 +262,7 @@ if(GCC)
                 set(ARM_ARGS -mcpu=native -mfloat-abi=hard -mfpu=vfp -marm)
             endif()
         endif()
-    endif()
+    endif()    
     add_definitions(${ARM_ARGS})
     if(FPROFILE_GENERATE)
         if(INTEL_CXX)
